--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,11 @@
+[color]
+	diff = auto
+	status = auto
+	branch = auto
 [user]
 	name = spookypeanut
 	email = github@spookypeanut.co.uk
+[diff]
+	external = git_diff_wrapper
+[pager]
+	diff =
