Add supertab to .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule ".vim/vcscommand"]
 	path = .vim/vcscommand
 	url = http://repo.or.cz/r/vcscommand.git
+[submodule ".vim/supertab"]
+	path = .vim/supertab
+	url = http://github.com/ervandew/supertab
 [submodule ".vim/nerdcommenter"]
 	path = .vim/nerdcommenter
 	url = http://github.com/scrooloose/nerdcommenter.git
