--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule ".vim/nerdcommenter"]
 	path = .vim/nerdcommenter
 	url = http://github.com/scrooloose/nerdcommenter.git
+[submodule ".vim/supertab"]
+	path = .vim/supertab
+	url = http://github.com/ervandw/supertab.git
 [submodule ".vim/twitvim"]
 	path = .vim/twitvim
 	url = http://github.com/developwithpassion/twitvim.git
