--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,14 @@
 [color]
-	interactive = auto
-	diff = auto
-	status = auto
 	branch = auto
+	diff = auto
+	interactive = auto
+	status = auto
 [alias]
 	st = status -s
 	ci = commit
+    co = checkout
 	graph = log --graph --all --oneline --decorate --pretty=\"format:%C(yellow)%h %Cblue%an %Cgreen%ar%C(yellow bold)%d%Creset%n%s\"
+    pull2 = "!git fetch origin && ( git pull --ff-only || git rebase -p origin/$(git current-branch))"
     vim = difftool --tool=vimdiff
 [user]
 	name = spookypeanut
