We're not changing the escape, so comment it out
This stops us getting an error message that I don't understand

--- a/.screenrc
+++ b/.screenrc
@@ -1,6 +1,6 @@
 # Set escape character to ctrl-space.
 # Press ctrl-space followed by 'a' to send a ctrl-space to a program running in your screen.
-escape ^a 
+#escape ^a 
 
 # Force terminal to 256-color.
 #term screen-256color
