--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = http://github.com/scrooloose/nerdcommenter.git
 [submodule ".vim/supertab"]
 	path = .vim/supertab
-	url = http://github.com/ervandw/supertab.git
+	url = http://github.com/ervandew/supertab.git
 [submodule ".vim/twitvim"]
 	path = .vim/twitvim
 	url = http://github.com/developwithpassion/twitvim.git
