--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule ".vim/pathogen"]
 	path = .vim/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule ".vim/ropevim"]
+	path = .vim/ropevim
+	url = https://github.com/sontek/rope-vim.git
+[submodule ".vim/bundle/ropevim"]
+	path = .vim/bundle/ropevim
+	url = https://github.com/sontek/rope-vim.git
