Add a complete clear (history and screen) to screen (on _)

--- a/.screenrc
+++ b/.screenrc
@@ -24,6 +24,7 @@ source .screenwindows
 bind f eval "caption splitonly"
 bind F eval "caption always"
 bind 0 eval "scrollback 0" "scrollback 15000"
+bind _ eval "clear" "scrollback 0" "scrollback 15000"
 
 # Ctrl left and right
 bindkey ^[[1;5D prev
