--- a/.workgitconfig
+++ b/.workgitconfig
@@ -15,4 +15,6 @@
     name = "Henry Bush"
     email = hbush@framestore.com
 [rerere]
-	enabled = 1
+    enabled = 1
+[url "git:/scm/"]
+    insteadOf = /net/git/
