Allow both C-a C-c and C-a c to make a new window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ set-option -g mouse-select-window off
 # New panes start at home
 #set-option -g default-path ""
 #bind-key c new-window 'cd; bash -i'
+bind-key C-c new-window
 
 # Quick access to man pages and htop
 bind-key "~" split-window -v "exec htop"
