--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,9 @@ bind-key "~" split-window -v "exec htop"
 # List current directory contents
 bind-key l split-window 'ls -C --color | less'
 
+# Clear screen and scrollback
+bind-key _ clear-history \; display-message "Scrollback cleared"
+
 # Execute anything in a split
 #bind-key x split-window -l 20 "read -p '\$ ' app; \$app; sleep 1"
 #bind-key h split-window -l 20 "read -p '\$ man ' page; man \$page || sleep 1"
