--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,15 @@ set -sg escape-time 0
 set-window-option -g xterm-keys on
 
 # Use vi keys in copy mode
-set-window-option -g mode-keys vi
+#set-window-option -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard'
+set-option -g history-limit 15000
 
 # Allow mouse to select panes in a split window
 set-option -g mouse-select-pane off
