--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 	url = git://github.com/Raimondi/delimitMate.git
 [submodule ".vim/ropevim"]
 	path = .vim/ropevim
-	url = https://github.com/sontek/rope-vim.git
+	url = https://github.com/python-rope/ropevim.git
 [submodule ".vim/bundle/ropevim"]
 	path = .vim/bundle/ropevim
-	url = https://github.com/sontek/rope-vim.git
+	url = https://github.com/python-rope/ropevim.git
