--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,7 +69,7 @@ set -g visual-activity off
 
 # Support 256 colours
 set -g default-terminal "screen-256color"
-set -g terminal-overrides "xterm*:colors=256"
+#set -g terminal-overrides "xterm*:colors=256"
 
 # Set command prompt/message bar colours
 set-window-option -g message-bg colour234
