A few config tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,9 +59,14 @@ bind -n C-Right next-window
 
 # Bind Alt-Shift-Arrow to switch panes
 bind -n M-S-Left select-pane -L
+bind-key h select-pane -L
 bind -n M-S-Right select-pane -R
+bind-key l select-pane -R
 bind -n M-S-Up select-pane -U
+bind-key k select-pane -U
 bind -n M-S-Down select-pane -D
+bind-key j select-pane -D
+
 
 # Turn on window activity notifications
 setw -g monitor-activity on
