--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,6 @@
     email = github@spookypeanut.co.uk
 [push]
 	default = simple
+[gui]
+[gui]
+	fontdiff = -family ProggySquareTT -size 11 -weight normal -slant roman -underline 0 -overstrike 0
