--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,9 +29,7 @@ bind -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard'
 set-option -g history-limit 15000
 
 # Allow mouse to select panes in a split window
-set-option -g mouse-select-pane off
-set-option -g mouse-resize-pane off
-set-option -g mouse-select-window off
+set-option -g mouse off
 
 # New panes start at home
 #set-option -g default-path ""
