Updates from work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,10 @@ set -sg escape-time 0
 # Use xterm-style escape sequences
 set-window-option -g xterm-keys on
 
+# Allow tmux to set terminal title
+set -g set-titles on
+set -g set-titles-string "#T"
+
 # Use vi keys in copy mode
 #set-window-option -g mode-keys vi
 unbind [
@@ -45,12 +49,6 @@ bind-key l split-window 'ls -C --color | less'
 # Clear screen and scrollback
 bind-key _ clear-history \; display-message "Scrollback cleared"
 
-# Execute anything in a split
-#bind-key x split-window -l 20 "read -p '\$ ' app; \$app; sleep 1"
-#bind-key h split-window -l 20 "read -p '\$ man ' page; man \$page || sleep 1"
-#bind-key p split-window -l 20 "exec ipython || sleep 2"
-#bind-key '"' split-window -l 20
-
 # Bind Ctrl-Shift-Left/Right to switch windows
 bind -n C-Left previous-window
 bind -n C-Right next-window
@@ -65,14 +63,17 @@ bind-key k select-pane -U
 bind -n M-S-Down select-pane -D
 bind-key j select-pane -D
 
+# pane movement
+bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # Turn on window activity notifications
 setw -g monitor-activity on
 set -g visual-activity off
 
 # Support 256 colours
-set -g default-terminal "screen-256color"
-#set -g terminal-overrides "xterm*:colors=256"
+#set -g default-terminal "screen-256color"
+set -g terminal-overrides "xterm*:XT:colors=256"
 
 # Set command prompt/message bar colours
 set-window-option -g message-bg colour234
@@ -93,9 +94,9 @@ set-window-option -g window-status-format "#[fg=colour253] #I: #[fg=colour250]#W
 set-window-option -g window-status-current-bg colour233
 set-window-option -g window-status-current-format "#[fg=colour7] #I: #[fg=colour7]#W "
 
-# Window border colours
-set-option -g pane-border-fg colour8
-set-option -g pane-active-border-fg colour8
+set -g pane-border-fg colour20
+set -g pane-active-border-fg colour33
+set -g pane-active-border-bg default
 
 bind-key m set-option -g mode-mouse on
 bind-key M set-option -g mode-mouse off
