--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,13 +27,15 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection
-bind -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+#bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe 'xclip -in -selection clipboard'
 set-option -g history-limit 15000
 
 # Allow mouse to select panes in a split window
-set-option -g mouse off
+#set-option -g mouse-select-pane off
+#set-option -g mouse-resize-pane off
+#set-option -g mouse-select-window off
 
 # New panes start at home
 #set-option -g default-path ""
