--- a/.inputrc
+++ b/.inputrc
@@ -5,7 +5,7 @@ set mark-symlinked-directories on
 "[A": history-search-backward
 "[B": history-search-forward
 # Add an echo before the current line, and then run it
-"\C-k": "\C-[Iecho \C-m"
+#"\C-k": "\C-[Iecho \C-m"
 # Remove the echo from before the previous line, then run it
-"\C-l": "\C-[\C-P^5x\C-j"
-"\C-x\"": "\"\"\C-b"
+#"\C-l": "\C-[\C-P^5x\C-j"
+#"\C-x\"": "\"\"\C-b"
