--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,11 +32,6 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-pipe 'xclip -in -selection clipboard'
 set-option -g history-limit 15000
 
-# Allow mouse to select panes in a split window
-#set-option -g mouse-select-pane off
-#set-option -g mouse-resize-pane off
-#set-option -g mouse-select-window off
-
 # New panes start at home
 #set-option -g default-path ""
 #bind-key c new-window 'cd; bash -i'
@@ -100,5 +95,5 @@ set -g pane-border-style fg=colour20
 set -g pane-active-border-style fg=colour33
 set -g pane-active-border-style bg=default
 
-bind-key m set-option -g mode-mouse on
-bind-key M set-option -g mode-mouse off
+bind-key m set-option -g mouse on
+bind-key M set-option -g mouse off
