--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set-option -g history-limit 15000
 bind-key C-c new-window
 
 # Quick access to man pages and htop
-bind-key "~" split-window -v "exec htop"
+bind-key \~ split-window -v "exec htop"
 
 # List current directory contents
 bind-key l split-window 'ls -C --color | less'
