--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Set C-a as the "prefix" not Ctrl-B
 set-option -g prefix C-a 
 unbind-key C-b
+set -as terminal-overrides ',*:smcup@:rmcup@'
 
 # Make Ctrl-A,A the way to send Ctrl-A to running apps
 bind-key a send-prefix
@@ -97,3 +98,31 @@ set -g pane-active-border-style bg=default
 
 bind-key m set-option -g mouse on
 bind-key M set-option -g mouse off
+
+# This is messy. It's purely a way to stop the terminal sending cursor keystrokes to tmux
+# https://github.com/tmux/tmux/issues/1795
+set -g mouse on
+unbind -n Left
+unbind -n Up
+unbind -n Down
+unbind -n Right
+unbind -n MouseDown1Pane
+unbind -n MouseDrag1Pane
+unbind -n MouseDragEnd1Pane
+unbind -n WheelUpPane
+unbind -n WheelDownPane
+unbind -n MouseDown1Pane
+unbind -n MouseDrag1Pane
+unbind -n MouseDragEnd1Pane
+unbind -n WheelUpPane
+unbind -n WheelDownPane
+unbind -n MouseDown1Pane
+unbind -n MouseDown1Status
+unbind -n MouseDown3Pane
+unbind -n MouseDrag1Pane
+unbind -n MouseDrag1Border
+unbind -n WheelUpPane
+unbind -n WheelUpStatus
+unbind -n WheelDownStatus
+
+
