--- a/MusicBrainz/Picard-2.4.1.ini
+++ b/MusicBrainz/Picard-2.4.1.ini
@@ -1,19 +1,19 @@
 [application]
-version=2.4.2.final0
+version=2.4.1.final0
 
 [persist]
-album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\x4\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x3\xbb\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2O\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\x1\x1a\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
+album_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\n\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\x3\xaa\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2O\0\0\0\x1\0\0\0\0\0\0\0R\0\0\0\x1\0\0\0\0\0\0\x1\t\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
 bottom_splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1\x8f\0\0\x1\xf2\x1\0\0\0\x1\x1\0\0\0\x2\0)
 current_browser_path=/home/hbush
 current_directory=/home/hbush/mp3s/Music/A/Alisha's Attic
-file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\x4\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x3\xbc\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2\x36\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\x1T\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
+file_view_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x2\x1\0\0\0\0\0\0\0\0\0\0\0\xe\xf8?\0\0\0\v\0\0\0\n\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\x3\xbc\0\0\0\xe\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\x2\x36\0\0\0\x1\0\0\0\0\0\0\0\x32\0\0\0\x1\0\0\0\0\0\0\x1T\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)
 geometry_AlbumInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x13\0\0\x5\xf5\0\0\x3\xad\0\0\a\xc1\0\0\x1\x14\0\0\x6\r\0\0\x3\xac\0\0\a\xc0\0\0\0\0\0\0\0\0\a\x80\0\0\x1\x14\0\0\x6\r\0\0\x3\xac\0\0\a\xc0)
 geometry_CAATypesSelectorDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x30\0\0\x1?\0\0\x3\xd5\0\0\x3$\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#\0\0\0\0\0\0\0\0\a\x80\0\0\0\x31\0\0\x1W\0\0\x3\xd4\0\0\x3#)
 geometry_ClusterInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x4T\0\0\x5\x3\0\0\x6 \0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x4l\0\0\x5\x2\0\0\x6\x1f)
 geometry_FileInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\0K\0\0\a\x15\0\0\x4\x37\0\0\x2j\0\0\0\x63\0\0\a\x14\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\0\x63\0\0\a\x14\0\0\x4\x36)
-geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\xff\xff\xff\xff\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
-geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\xff\xff\xff\xff\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
-geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\x4l\0\0\a\x7f\0\0\bj\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x39\0\0\a\x7f\0\0\x4\x37)
+geometry_HistoryView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
+geometry_LogView=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\x4G\0\0\x2\x39\0\0\x5\xd6)
+geometry_MainWindow=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4T\0\0\a\x7f\0\0\bj\0\0\0\0\0\0\x4G\0\0\a\x7f\0\0\bE\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\x4l\0\0\a\x7f\0\0\bj)
 geometry_OptionsDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0s\0\0\x1x\0\0\x3\x94\0\0\x4\x37\0\0\0t\0\0\x1\x90\0\0\x3\x93\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\0t\0\0\x1\x90\0\0\x3\x93\0\0\x4\x36)
 geometry_TrackInfoDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2i\0\0\x1\x1e\0\0\x5\x3\0\0\x2\xea\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9\0\0\0\0\0\0\0\0\a\x80\0\0\x2j\0\0\x1\x36\0\0\x5\x2\0\0\x2\xe9)
 geometry_TrackSearchDialog=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2M\0\0\x1\x44\0\0\x5\x1e\0\0\x2\xc4\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3\0\0\0\0\0\0\0\0\a\x80\0\0\x2N\0\0\x1\\\0\0\x5\x1d\0\0\x2\xc3)
@@ -21,8 +21,8 @@ last_selected_script_pos=-1
 mediaplayer_playback_rate=1
 mediaplayer_volume=50
 metadatabox_header_state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x6\xce\0\0\0\x3\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\0\xd2\0\0\0\x1\0\0\0\0\0\0\x1\xf0\0\0\0\x1\0\0\0\0\0\0\x4\f\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0})
-oauth_access_token=R1wuql2eL57_NqAnykj-qw
-oauth_access_token_expires=1599754143
+oauth_access_token=51hcEZFHL55sWA_5c7iAKA
+oauth_access_token_expires=1597679871
 oauth_refresh_token=NONQz8_M_nEGPxLyag-Xhw
 oauth_refresh_token_scopes=profile tag rating collection submit_isrc submit_barcode
 oauth_username=spookypeanut
@@ -37,7 +37,7 @@ view_cover_art=true
 view_file_browser=false
 view_toolbar=true
 window_maximized=true
-window_state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\a\x80\0\0\x3\x82\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x2\0\0\0\x2\0\0\0\x2\0\0\0\x18\0m\0\x61\0i\0n\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0s\0\x65\0\x61\0r\0\x63\0h\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\x3\xd0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x3\0\0\0\x1\0\0\0\x1c\0p\0l\0\x61\0y\0\x65\0r\0_\0t\0o\0o\0l\0\x62\0\x61\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
+window_state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\a\x80\0\0\x3\x82\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x2\0\0\0\x2\0\0\0\x2\0\0\0\x18\0m\0\x61\0i\0n\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1c\0s\0\x65\0\x61\0r\0\x63\0h\0_\0t\0o\0o\0l\0\x62\0\x61\0r\x1\0\0\x3\xdf\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x3\0\0\0\x1\0\0\0\x1c\0p\0l\0\x61\0y\0\x65\0r\0_\0t\0o\0o\0l\0\x62\0\x61\0r\0\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
 
 [setting]
 aac_save_ape=true
