Some updates from bob
# Conflicts:
#	MusicBrainz/Picard.ini

--- a/whipper/whipper.conf
+++ b/whipper/whipper.conf
@@ -6,7 +6,12 @@ defeats_cache = True
 read_offset = 103
 
 [whipper.cd.rip]
-# Note: the format char '%' must be represented '%%'.
-# Do not add inline comments with an unescaped '%' character (else an 'InterpolationSyntaxError' will occur).
 track_template = flac/%%A - %%d/%%t - %%a - %%n
-disc_template =  flac/%%A - %%d/%%A - %%d
+disc_template = flac/%%A - %%d/%%A - %%d
+
+[drive:Slimtype%3ADVD%20A%20%20DU8A5SH%20%20%3ABC61]
+vendor = Slimtype
+model = DVD A  DU8A5SH
+release = BC61
+read_offset = 6
+
